--- a/index.html
+++ b/index.html
@@ -191,15 +191,13 @@
     </div>
   
     <div class="navbar">
-      <ul class="nav-list">
-        <li class="list" id="list1">All</li>
-        <li class="list" id="list2">UX Design</li>
-        <li class="list" id="list3">Web Design</li>
-        <li class="list" id="list4">App Development</li>
-        <li class="list" id="list5">Game Design</li>
-        <li class="list" id="list6">Graphic Design</li>
-      </ul>
-    </div>
+        <a class="nav-link" href="#">All</a>
+        <a class="nav-link" href="#">UX Design</a>
+        <a class="nav-link" href="#">Web Design</a>
+        <a class="nav-link" href="#">App Development</a>
+        <a class="nav-link" href="#">Game Design</a>
+        <a class="nav-link" href="#">Graphic Design</a>
+      </div>
   
     <div class="grid-container">
         <div class="grid-row">
