making the first session responsive

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a class="block__third_title nav__item" href="#" >Contact Us</a>
             <a class="block__third_title nav__item" href="#" >Let's Talk</a>
         </nav>
+       
     </div>
 </header>
     <section class="block block--main light-background">
@@ -458,7 +459,7 @@
                         </div>
                         <div class="swiper-testimonial__person">
                             <picture class="swiper-testimonial__picture">
-                                <img class="swiper-testimonial__img" src="./img/Phillip-Levin.png"
+                                <img class="swiper-testimonial__img" src="./images/imgy.png"
                                     alt="Phillip Levin" />
                             </picture>
                             <div>
@@ -558,7 +559,7 @@
                         </div>
                         <div class="swiper-testimonial__person">
                             <picture class="swiper-testimonial__picture">
-                                <img src="./img/Lincoln-Lipshutz.png" alt="Lincoln Lipshutz" />
+                                <img src="./images/imgy1.png" alt="Lincoln Lipshutz" />
                             </picture>
                             <div>
                                 <h2 class="block__third_title swiper-testimonial__name">Lincoln Lipshutz</h2>
@@ -657,7 +658,7 @@
                         </div>
                         <div class="swiper-testimonial__person">
                             <picture class="swiper-testimonial__picture">
-                                <img class="swiper-testimonial__img" src="./img/Craig-Siphron.png"
+                                <img class="swiper-testimonial__img" src="./images/Image (8).png"
                                     alt="Craig Siphron" />
                             </picture>
                             <div>
@@ -755,7 +756,7 @@
                         </p>
                         <div class="swiper-testimonial__person">
                             <picture class="swiper-testimonial__picture">
-                                <img class="swiper-testimonial__img" src="./img/Phillip-Levin.png"
+                                <img class="swiper-testimonial__img" src="./images/imgy.png"
                                     alt="Phillip Levin" />
                             </picture>
                             <div>
@@ -853,7 +854,7 @@
                         </p>
                         <div class="swiper-testimonial__person">
                             <picture class="swiper-testimonial__picture">
-                                <img src="./img/Lincoln-Lipshutz.png" alt="Lincoln Lipshutz" />
+                                <img src="./images/imgy1.png" alt="Lincoln Lipshutz" />
                             </picture>
                             <div>
                                 <h2 class="block__third_title swiper-testimonial__name">Lincoln Lipshutz</h2>
@@ -950,7 +951,7 @@
                         </p>
                         <div class="swiper-testimonial__person">
                             <picture class="swiper-testimonial__picture">
-                                <img src="./img/Craig-Siphron.png" alt="Craig Siphron" />
+                                <img src="./images/Image (8).png" alt="Craig Siphron" />
                             </picture>
                             <div>
                                 <h2 class="block__third_title swiper-testimonial__name">Craig Siphron</h2>
